# autojudge

./: submission_watcher_saver.py
autojudge/: admins.txt  settings.py
content/: Dockerfile  compile_and_test.py  main_compiler.sh  main_tester.sh
content/judgeClangTool/: CMakeLists.txt  README.md
content/judgeClangTool/src/: test.cpp
judge/: context_processors.py  forms.py  handler.py  models.py  tests.py  urls.py  views.py
judge/fixtures/: index_string.json
judge/migrations/: 0002_auto_20210912_1052.py  0003_auto_20210912_1054.py  0004_auto_20210912_1212.py  0005_auto_20210912_1217.py
judge/templates/judge/: contest_detail.html  contest_persons.html  edit_index_string.html  edit_problem.html  get_student_submissions.html  index.html  new_contest.html  new_problem.html  problem_detail.html  problem_submissions.html  submission_detail.html
judgeClangTool/: CMakeLists.txt  README.md
judgeClangTool/src/: test.cpp
